[package]
name = "declaration_site"
description = "Iterate through the debug info associated with currently loaded functions"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DJMcNab/declaration_site"
keywords = ["diagnostics", "error"]
categories = ["visualization"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
findshlibs = "0.10.2"
symbolic-debuginfo = "8.7.0"
symbolic-demangle = { version = "8.7.0", default-features = false, features = [
    "rust",
] }
