[package]
name = "declaration_site"
description = "Iterate through the debug info associated with currently loaded functions"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DJMcNab/declaration_site"
keywords = ["diagnostics", "error"]
categories = ["visualization"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
findshlibs = "0.10.2"
# Do not use the breakpad feature, which requires the MPL-2.0 nom-supreme
# Additionally, the breakpad feature seems niche upon first inspection
symbolic-debuginfo = { version = "8.7.0", default-features = false, features = [
    "elf",
    "macho",
    "ms",
    "sourcebundle",
    "wasm",
] }
symbolic-demangle = { version = "8.7.0", default-features = false, features = [
    "rust",
] }
symbolic-common = "8.7.0"

scroll = "0.11"
goblin = { version = "0.5.1", default-features = false }
